--- a/src/app/cliente/altera-perfil/altera-perfil.component.html
+++ b/src/app/cliente/altera-perfil/altera-perfil.component.html
@@ -3,7 +3,7 @@
         <div class="row d-flex justify-content-center align-items-center h-100">
             <div class="col-12 col-md-8 col-lg-6 col-xl-5">
                 <div *ngIf="cliente.id">
-                    <div class="card bg-dark text-white" style="border-radius: 1rem;">
+                    <div class="card bg-dark m-3 text-white" style="border-radius: 1rem;">
                         <div class="card-body p-5">
                             <form (ngSubmit)="alterarCliente()" #formAlterar="ngForm">
                                 <div class="mb-md-1 mt-md-1 pb-2">
