--- a/src/app/cliente/cadastro/cadastro.component.html
+++ b/src/app/cliente/cadastro/cadastro.component.html
@@ -2,7 +2,7 @@
     <div class="container py-5 h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-          <div class="card bg-dark text-white" style="border-radius: 1rem;">
+          <div class="card bg-dark text-white m-3" style="border-radius: 1rem;">
             <div class="card-body p-5">
                 <form (ngSubmit)="cadastrarCliente()" #formCadastrar="ngForm">
                     <div class="mb-md-1 mt-md-1 pb-2">
