--- a/src/app/cliente/cadastro/cadastro.component.html
+++ b/src/app/cliente/cadastro/cadastro.component.html
@@ -83,7 +83,7 @@
                         </div>
 
                         <div class="form-outline form-white mb-2 text-center">
-                            <button class="btn btn-outline-light " type="submit" [disabled]="!formCadastrar.valid || !cpfValido || cliente.salario <= 0">Cadastrar</button>
+                            <button class="btn btn-outline-light " type="submit" [disabled]="!formCadastrar.valid || !cpfValido || cliente.salario < 0">Cadastrar</button>
                             <p class="mt-3">Já tem cadastro? <a routerLink="/">Entrar</a></p>
                         </div>
                     </div>
