--- a/src/app/cliente/altera-perfil/altera-perfil.component.html
+++ b/src/app/cliente/altera-perfil/altera-perfil.component.html
@@ -95,7 +95,7 @@
                                             Voltar
                                         </a>
                                         <button class="btn btn-primary" type="submit"
-                                            [disabled]="!formAlterar.valid || cliente.salario <= 0 ">Alterar
+                                            [disabled]="!formAlterar.valid || cliente.salario < 0 ">Alterar
                                             perfil</button>
 
 
