--- a/src/app/gerente/detalhe-cliente/detalhe-cliente.component.html
+++ b/src/app/gerente/detalhe-cliente/detalhe-cliente.component.html
@@ -18,13 +18,13 @@
             <p><strong>Salário:</strong> {{ cliente.salario }}</p>
           </td>
           <td>
-            <p><strong>Tipo:</strong> {{ cliente.endereco.tipo }}</p>
-            <p><strong>Logradouro:</strong> {{ cliente.endereco.logradouro }}</p>
-            <p><strong>Número:</strong> {{ cliente.endereco.numero }}</p>
-            <p><strong>Complemento:</strong> {{ cliente.endereco.complemento }}</p>
-            <p><strong>CEP:</strong> {{ cliente.endereco.cep }}</p>
-            <p><strong>Cidade:</strong> {{ cliente.endereco.cidade }}</p>
-            <p><strong>Estado:</strong> {{ cliente.endereco.estado }}</p>
+            <p><strong>Tipo:</strong> {{ cliente.tipo }}</p>
+            <p><strong>Logradouro:</strong> {{ cliente.logradouro }}</p>
+            <p><strong>Número:</strong> {{ cliente.numero }}</p>
+            <p><strong>Complemento:</strong> {{ cliente.complemento }}</p>
+            <p><strong>CEP:</strong> {{ cliente.cep }}</p>
+            <p><strong>Cidade:</strong> {{ cliente.cidade }}</p>
+            <p><strong>Estado:</strong> {{ cliente.estado }}</p>
           </td>
           <td>   
             <p><strong>Saldo:</strong> {{ buscaSaldoConta(cliente).saldo }}</p>
